manifests/mrozy-landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrozy-landing
  namespace: mrozy-landing
spec:
  selector:
    app: mrozy-landing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
