manifests/mrozy-landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrozy-landing
  namespace: mrozy-landing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - mrozy.org
      secretName: mrozy-landing-tls
  rules:
    - host: mrozy.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mrozy-landing
                port:
                  number: 80
